# AutoBoard

./: .gitignore  README.md  settings.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rAU/: strings.xml
app/src/main/res/values-en-rCA/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-en-rIN/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-is/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-jpr/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-kab/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-kw/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-ota/: strings.xml
app/src/main/res/values-pa-rPK/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sv/: strings.xml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
(+25 files in other folders)
